--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
               />
             </div>
           </div>
-          <button type="submit" id="save-names" class="save">Guardar</button>
+          <div class="save-container">
+            <button type="submit" id="save-names" class="save">Guardar</button>
+            <img
+              class="check"
+              id="check-name"
+              src="./public/imgs/check-double-solid.svg"
+              alt=""
+            />
+          </div>
         </form>
       </aside>
       <aside id="questions" class="questions">
@@ -72,9 +80,17 @@
               />
             </div>
           </div>
-          <button type="submit" id="save-questions" class="save">
-            Guardar
-          </button>
+          <div class="save-container">
+            <button type="submit" id="save-questions" class="save">
+              Guardar
+            </button>
+            <img
+              id="check-question"
+              class="check"
+              src="./public/imgs/check-double-solid.svg"
+              alt=""
+            />
+          </div>
         </form>
       </aside>
     </section>
